git property extractor util more test cases

--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,29 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <test.base>${basedir}/src/test/unit</test.base>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>unit</id>
+            <properties>
+                <test.base>${basedir}/src/test/unit</test.base>
+            </properties>
+        </profile>
+        <profile>
+            <id>it:test</id>
+            <properties>
+                <test.base>${basedir}/src/test/it</test.base>
+            </properties>
+        </profile>
+    </profiles>
+
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-quartz</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-quartz</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -47,8 +63,27 @@
     </dependencies>
 
     <build>
+        <testSourceDirectory>${test.base}</testSourceDirectory>
         <plugins>
-            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-checkstyle-plugin -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.aeon.scheduler.service.util.MvnGitPropertyExtractor</mainClass>
+                    <arguments>
+                        <argument>${project.build.outputDirectory}</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -56,7 +91,7 @@
                 <configuration>
                     <configLocation>google_checks.xml</configLocation>
                     <encoding>UTF-8</encoding>
-                    <consoleOutput>true</consoleOutput>
+                    <consoleOutput>false</consoleOutput>
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
                 </configuration>
@@ -78,9 +113,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <excludes>
-                        <exclude>${basedir}/src/test/it/*</exclude>
-                    </excludes>
                 </configuration>
             </plugin>
             <plugin>
