fix test directory structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-project.version=0.0.1-SNAPSHOT
+spring.profiles.active=dev
+
+postgres.db.host=localhost
+postgres.db.port=5432
+postgres.db.user=postgres
+postgres.db.password=password
