--- a/pom.xml
+++ b/pom.xml
@@ -16,23 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <test.base>${basedir}/src/test/unit</test.base>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>unit</id>
-            <properties>
-                <test.base>${basedir}/src/test/unit</test.base>
-            </properties>
-        </profile>
-        <profile>
-            <id>it:test</id>
-            <properties>
-                <test.base>${basedir}/src/test/it</test.base>
-            </properties>
-        </profile>
-    </profiles>
 
     <dependencies>
         <!--        <dependency>-->
@@ -63,7 +47,6 @@
     </dependencies>
 
     <build>
-        <testSourceDirectory>${test.base}</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -113,6 +96,25 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>-Dspring.profiles.active=test</argLine>
+                    <excludedGroups>IntegrationTest</excludedGroups>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includes>
+                        <include>**/*_ItTest.java</include>
+                    </includes>
                 </configuration>
             </plugin>
             <plugin>
@@ -127,7 +129,7 @@
                                 <limit>
                                     <counter>LINE</counter>
                                     <value>COVEREDRATIO</value>
-                                    <minimum>0.80</minimum>
+                                    <minimum>0.0</minimum>
                                 </limit>
                             </limits>
                         </rule>
@@ -135,9 +137,22 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <id>jacoco-check</id>
+                        <phase>test</phase>
                         <goals>
                             <goal>check</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
