gradle with checkstyle done

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <configLocation>google_checks.xml</configLocation>
+                    <configLocation>checkstyle/google_checks.xml</configLocation>
                     <encoding>UTF-8</encoding>
                     <consoleOutput>false</consoleOutput>
                     <failsOnError>true</failsOnError>
