--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,9 @@ test {
 
 intTest{
     useJUnitPlatform()
+    testLogging{
+        showStandardStreams = true
+    }
 }
 
 intTest.dependsOn classes, initGitProperties
