--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,11 @@ jdk: oraclejdk8
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-
-script:
+before_script:
   - chmod +x ./gradlew
-  - ./gradlew checkstyleMain test intTest
+script:
+  - ./gradlew build
