test ouput plugin added

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
     id 'checkstyle'
-
+    id 'com.adarshr.test-logger' version '2.0.0'
 }
 
 group = 'com.aeon'
