--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ os: linux
 dist: trusty
 jdk: oraclejdk8
 
+services:
+  - docker
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
