kill postgres on travis vm before build

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ cache:
     - $HOME/.gradle/wrapper/
 before_script:
   - chmod +x ./gradlew
+  - sudo -s && pkill postgres && exit
 script:
   - ./gradlew build
