--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ postgres.db.password=password
 #quartz default config
 spring.quartz.job-store-type=jdbc
 spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
